# pii-mask-tr

./: .gitignore  LICENSE  README.md  pyproject.toml
.streamlit/: config.toml
pii_mask/: __init__.py  _app.py  berturk_crf.py  cli.py  identifier_validators.py  inference.py  masking.py  model_loader.py  pdf_ingest.py  pipeline.py  preview.py  ui.py
tests/: test_masking_round_trip.py  test_model_discovery.py  test_preview.py
